--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      width: 100%;
     }
 
     /* Shared base sizing (then override per font if you want) */
@@ -247,6 +248,20 @@
       width: 100%;
       display: flex;
       justify-content: space-between;
+    }
+
+    @media (max-width: 768px) {
+      .slogan {
+        font-size: 11px;
+        letter-spacing: 1.5px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .slogan {
+        font-size: 9px;
+        letter-spacing: 1px;
+      }
     }
 
     /* Optional slogan font variants (apply per card by adding the class) */
