--- a/index.html
+++ b/index.html
@@ -259,6 +259,14 @@
       justify-content: space-between;
     }
 
+    .slogan-tight {
+      justify-content: center;
+      gap: 35px;
+      /* controls spacing between words and dots */
+      padding: 0 0px;
+      /* small side padding */
+    }
+
     @media (max-width: 768px) {
       .slogan {
         font-size: 11px;
@@ -462,7 +470,7 @@
         <div class="rye">
           <div class="rye-variant-biondi">RYE</div>
         </div>
-        <div class="slogan slogan-montserrat">
+        <div class="slogan slogan-montserrat slogan-tight">
           <span>Bakes</span>
           <span>.</span>
           <span>Coffee</span>
