--- a/index.html
+++ b/index.html
@@ -358,12 +358,12 @@
       }
     }
 
-    @media (max-width: 480px) {
+    /* @media (max-width: 480px) {
       .slogan {
         font-size: 9px;
         letter-spacing: 1px;
       }
-    }
+    } */
 
     /* Optional slogan font variants (apply per card by adding the class) */
     .slogan-inter {
