--- a/index.html
+++ b/index.html
@@ -351,12 +351,12 @@
       /* small side padding */
     }
 
-    @media (max-width: 768px) {
+    /* @media (max-width: 768px) {
       .slogan {
         font-size: 11px;
         letter-spacing: 1.5px;
       }
-    }
+    } */
 
     /* @media (max-width: 480px) {
       .slogan {
